Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Made the Quaternion costructor from a Vector<3> (for
	  a rotation around that axis) 'explicit'.

Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* Added round-off age checks to the functions where
	  Quaternion and RotMatrix<3> rotate each other.
	* Added rotate() convienience wrappers to RotMatrix,
	  Quaternion and Vector for cases where rotation
	  is just multiplication.

Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* wfmath/point.h, wfmath/axisbox.h, wfmath/axisbox_funcs.h,
	  wfmath/segment.h, wfmath/segment_funcs.h, wfmath/ball.h,
	  wfmath/rotbox.h, wfmath/rotbox_funcs.h, wfmath/polygon.h,
	  wfmath/polygon_funcs.h, wfmath/polygon.cpp: Added
	  Quaternion-based rotation functions and toParentCoords(),
	  toLocalCoords() to all shapes, in parallel to those
	  functions previously added to Point.
	* wfmath/rotmatrix*, wfmath/quaternion*: Added functions
	  to let RotMatrix<3> and Quaternion rotate each other.
	  RotMatrix<3>::rotate(Quaternion) was needed for
	  Quaternion-based rotation of RotBox<3>.

Sunday, January 18th, 2004   Ron Steinke <rsteinke@w-link.net>

	* wfmath/MersenneTwister.h, wfmath/const.h, wfmath/miniball_funcs.h:
	  Replace ANSI C headers #include <foo.h> with #include <cfoo>.
	* wfmath/stream.h: Removed commented-out sstream #include.
	* wfmath/timestamp.*: Moved winsock.h #include into the .cpp file,
	  moved timeval class declaration for win32 inside the TimeStamp
	  class.

Sunday, January 11th, 2004   Ron Steinke <rsteinke@w-link.net>

	* wfmath/timestamp.h: Pull winsock #include outside of
	  WFMath namespace.

Sunday, December 21st, 2003   Ron Steinke <rsteinke@w-link.net>

	* wfmath/timestamp.h: Pull in winsock2.h instead of winsock.h
	  under win32.

Friday, December 19th, 2003   Al Riddoch <alriddoch@zepler.org>

	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.
