@@ -25,7 +25,9 @@
 
 #include "const.h"
 #include "probability.h"
+#include "shuffle.h"
 #include <iostream>
+#include <vector>
 
 using namespace WFMath;
 
@@ -92,6 +94,18 @@ void test_probability(double mean, double std_dev, double step)
     }
   }
 //  std::cout << "my_fudge = " << my_fudge << std::endl;
+}
+
+// just a simple test, to make sure it's not really broken
+void test_shuffle()
+{
+  const int nums[] = {0, 4, 1, -5, 7, 3};
+  unsigned num_nums = sizeof(nums)/sizeof(nums[0]);
+  std::vector<int> foo(nums, nums + num_nums);
+  WFMath::Shuffle(foo);
+//  for(unsigned i = 0; i < foo.size(); ++i)
+//    std::cerr << foo[i] << ' ';
+//  std::cerr << std::endl;
 }
 
 int main()
